--- a/b.html
+++ b/b.html
@@ -98,21 +98,21 @@
         <tbody>
             <!-- Example Item Row 1 -->
             <tr>
-                <td>Drogue</td>
-                <td>a material that allows you to hang in another world of joy hhh price $250 1kg</td>
-                <td>250$ 1kg</td>
+                <td>Exir</td>
+                <td>Nice one</td>
+                <td>250$ </td>
                 <td><button class="buy-button">Buy Now</button></td>
             </tr>
             <!-- Example Item Row 2 -->
             <tr>
-                <td>Smuggled weapons</td>
-                <td>Deadly weapons, Kalashnikov, sniper, and knives</td>
+                <td>Smuggled WP</td>
+                <td>WP</td>
                 <td>599.99$</td>
                 <td><button class="buy-button">Buy Now</button></td>
             </tr>
             <!-- Example Item Row 3 -->
             <tr>
-                <td>Dark Elixir</td>
+                <td> Elixir</td>
                 <td>Gives forbidden powers but corrupts the user’s soul over time.</td>
                 <td>799.99$</td>
                 <td><button class="buy-button">Buy Now</button></td>
